@@ -529,8 +529,7 @@ static char cmd[] =
 "return $v}\n"
 "::xotcl::Object instproc method {name arguments body} {\n"
 "my proc name $arguments $body				}\n"
-"::xotcl::Class instproc method {\n"
-"-per-object:switch name arguments body} {\n"
+"::xotcl::Class instproc method {-per-object:switch name arguments body} {\n"
 "if {${per-object}} {\n"
 "my proc $name $arguments $body} else {\n"
 "my instproc $name $arguments $body}}\n"
